<resources>
    <string name="app_name">DetailedRegistration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="email">Email</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="textview">TextView</string>
    <string name="dash_username">Username</string>
    <string name="dash_mobileNumber">Mobile Number</string>
    <string name="dash_Email">Email</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome,</string>
    <string name="mobile_number">Mobile number:</string>
    <string name="email_id">Email Id:</string>
    <string name="clear_all">clear all</string>
    <string name="test">test</string>
</resources>