<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/newLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/username"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/det_username"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/dash_username"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/mobilenumber"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/det_mobile"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/dash_mobileNumber"
                android:textSize="25sp"
                android:textStyle="bold|italic" />



            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/email_id"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/det_email"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

        </LinearLayout>







<!--&lt;!&ndash;        <TextView&ndash;&gt;-->
<!--            android:id="@+id/mobile"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="60dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/mobile_number"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/det_username" />-->

<!--        <TextView-->
<!--            android:id="@+id/det_mobile"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginStart="180dp"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/mobilenumber"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/mobile" />-->

<!--        <TextView-->
<!--            android:id="@+id/det_email"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginStart="184dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/email"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/emailid" />-->

<!--        <TextView-->
<!--            android:id="@+id/emailid"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="28dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/email_id"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/det_mobile" />-->

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="32dp"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newLinearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
